--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Joel Butler by JoelButler</title>
+    <title>Personal-website by JoelButler</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Personal-website</h1>
-      <h2 class="project-tagline">A template for creating a quick &quot;about me&quot; website!</h2>
+      <h1 class="project-name">Joel Butler</h1>
+      <h2 class="project-tagline">An engineer(ing student's) personal website!</h2>
       <a href="https://github.com/JoelButler/Personal-Website" class="btn">View on GitHub</a>
       <a href="https://github.com/JoelButler/Personal-Website/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/JoelButler/Personal-Website/tarball/master" class="btn">Download .tar.gz</a>
