--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Joel Butler</h1>
-      <h2 class="project-tagline">An engineer(ing student's) personal website!</h2>
+      <h2 class="project-tagline">A Mechanical Engineer's personal website!</h2>
       <a href="https://github.com/JoelButler/Personal-Website" class="btn">View on GitHub</a>
       <a href="https://github.com/JoelButler/Personal-Website/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/JoelButler/Personal-Website/tarball/master" class="btn">Download .tar.gz</a>
