--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-  <title>My Website!</title>
+  <title>Joel Butler</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <meta name="description" content="My Website">
   <meta name="author" content="My Name">
@@ -15,16 +15,10 @@
   <div class="container">
 	<div class="inner">
   <div class="content">
-	  <h1>Hello, I'm an Example.</h1>
+	  <h1>Hello, I'm Joel Butler.</h1>
 	  <h2>Tagline about me.</h2>
 	  <p>
-	      Some more information about my life.
-	      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-	  	  Duis ullamcorper arcu vel libero feugiat, quis pretium ipsum ornare. Etiam nec auctor lectus.
-	  	  Quisque ut augue vitae nisi finibus interdum. Fusce varius convallis leo, quis efficitur ante aliquet vel.
-	      Fusce vulputate erat tincidunt nulla mollis, eget pharetra erat egestas.
-	      Mauris ante eros, malesuada tristique placerat commodo, ultrices in ante.
-	      Mauris tempor mi nibh, id sodales orci vestibulum sed. 
+	      This is an engineering student's personal website
 	  </p>
 	  <a href="http://twitter.com/"><i class="fa fa-twitter fa-4x"></i></a>
 	  <a href="http://stackoverflow.com/"><i class="fa fa-stack-overflow fa-4x"></i></a>
