--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 	<div class="inner">
   <div class="content">
 	  <h1>Hello, I'm Joel Butler.</h1>
-	  <h2>Tagline about me.</h2>
+	  <h2>This is a Mechanical Engineering student's personal website</h2>
 	  <p>
-	      This is an engineering student's personal website
+	      I plan on using this website to manage my personal development projects!
 	  </p>
 	  <a href="http://twitter.com/"><i class="fa fa-twitter fa-4x"></i></a>
 	  <a href="http://stackoverflow.com/"><i class="fa fa-stack-overflow fa-4x"></i></a>
