--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
 	  <p>
 	      I plan on using this website to manage my personal development projects!
 	  </p>
-	  <a href="http://twitter.com/"><i class="fa fa-twitter fa-4x"></i></a>
-	  <a href="http://stackoverflow.com/"><i class="fa fa-stack-overflow fa-4x"></i></a>
+	  <a href="http://facebook.com/"><i class="fa fa-facebook fa-4x"></i></a>
+	  <a href="http://instagram.com/"><i class="fa fa-instagram fa-4x"></i></a>
 	  <a href="http://github.com/"><i class="fa fa-github fa-4x"></i></a>
 	  <a href="http://youtube.com/"><i class="fa fa-youtube fa-4x"></i></a>
-	  <a href="http://soundcloud.com/"><i class="fa fa-soundcloud fa-4x"></i></a>
 	</div>
   </div>
   </div>
