--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	  <a href="http://instagram.com/"><i class="fa fa-instagram fa-4x"></i></a>
 	  <a href="http://github.com/"><i class="fa fa-github fa-4x"></i></a>
 	  <a href="http://youtube.com/"><i class="fa fa-youtube fa-4x"></i></a>
+	  <a href="http://linkedin.com/"><i class="fa fa-linkedin fa-4x"></i></a>
 	</div>
   </div>
   </div>
