--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	      I plan on using this website to manage my personal development projects!
 	  </p>
 	  <a href="http://facebook.com/"><i class="fa fa-facebook fa-4x"></i></a>
-	  <a href="http://instagram.com/"><i class="fa fa-instagram fa-4x"></i></a>
+	  <a href="http://instagram.com/jcwbutts"><i class="fa fa-instagram fa-4x"></i></a>
 	  <a href="http://youtube.com/"><i class="fa fa-youtube fa-4x"></i></a>
 	  <a href="http://linkedin.com/"><i class="fa fa-linkedin fa-4x"></i></a>
 	</div>
