--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
 	  <p>
 	      I plan on using this website to manage my personal development projects!
 	  </p>
-	  <a href="http://facebook.com/"><i class="fa fa-facebook fa-4x"></i></a>
 	  <a href="http://instagram.com/jcwbutts"><i class="fa fa-instagram fa-4x"></i></a>
 	  <a href="http://youtube.com/"><i class="fa fa-youtube fa-4x"></i></a>
-	  <a href="http://linkedin.com/"><i class="fa fa-linkedin fa-4x"></i></a>
+	  <a href="http://linkedin.com/joel-butler-2a0b9ab2"><i class="fa fa-linkedin fa-4x"></i></a>
 	</div>
   </div>
   </div>
