--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	  </p>
 	  <a href="http://instagram.com/jcwbutts"><i class="fa fa-instagram fa-4x"></i></a>
 	  <a href="http://youtube.com/"><i class="fa fa-youtube fa-4x"></i></a>
-	  <a href="http://linkedin.com/joel-butler-2a0b9ab2"><i class="fa fa-linkedin fa-4x"></i></a>
+	  <a href="https://ca.linkedin.com/in/joel-butler-2a0b9ab2"><i class="fa fa-linkedin fa-4x"></i></a>
 	</div>
   </div>
   </div>
