--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a class="active" href="home">Home</a></li>
+  <li><a href="about">About</a></li>
+  <li><a href="skills">News</a></li>
+  <li><a href="projects">News</a></li>
+  <li><a href="contact">Contact</a></li>
 </ul>
 </head>
 
