--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 	<meta charset="UTF-8">
   <title>Joel Butler</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <meta name="description" content="My Website">
-  <meta name="author" content="My Name">
+  <meta name="description" content="Personal Website">
+  <meta name="author" content="Joel Butler">
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <ul>
+   position: fixed;
+   top: 0;
+   width: 100%;
   <li><a class="active" href="home">Home</a></li>
   <li><a href="about">About</a></li>
   <li><a href="skills">News</a></li>
