--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<ul>
-  <li><a class="active" href="home">Home</a></li>
-  <li><a href="about">About</a></li>
-  <li><a href="skills">News</a></li>
-  <li><a href="projects">News</a></li>
-  <li><a href="contact">Contact</a></li>
-</ul>
+    <div class="nav">
+      <ul>
+        <li class="home"><a href="#">Home</a></li>
+        <li class="tutorgggials"><a class="active" href="#">Tutorials</a></li>
+        <li class="about"><a href="#">About</a></li>
+        <li class="news"><a href="#">Newsletter</a></li>
+        <li class="contact"><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </head>
 </head>
 
 <body>
