--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="nav">
       <ul>
         <li class="home"><a href="#">Home</a></li>
-        <li class="tutorgggials"><a class="active" href="#">Tutorials</a></li>
+        <li class="skills"><a class="active" href="#">Skills & Experience</a></li>
+        <li class="projects"><a href="#">Projects</a></li>
         <li class="about"><a href="#">About</a></li>
-        <li class="news"><a href="#">Newsletter</a></li>
         <li class="contact"><a href="#">Contact</a></li>
       </ul>
     </div>
