--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="nav">
       <ul>
         <li class="home"><a href="#">Home</a></li>
-        <li class=""><a class="active" href="#">Skills</a></li>
+        <li class="skills"><a class="active" href="#">Skills</a></li>
         <li class="projects"><a href="#">Projects</a></li>
         <li class="about"><a href="#">About</a></li>
         <li class="contact"><a href="#">Contact</a></li>
