--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 	  <h1>Hello, I'm Joel Butler.</h1>
 	  <h2>This is a Mechanical Engineering student's personal website</h2>
 	  <p>
-	      This will be recipies and cooking!
+	      This is some information about me
 	  </p>
 	  <a href="http://instagram.com/jcwbutts"><i class="fa fa-instagram fa-4x"></i></a>
 	  <a href="http://youtube.com/"><i class="fa fa-youtube fa-4x"></i></a>
