--- a/blog.html
+++ b/blog.html
@@ -4,11 +4,21 @@
 	<meta charset="UTF-8">
   <title>Joel Butler</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <meta name="description" content="My Website">
-  <meta name="author" content="My Name">
+  <meta name="description" content="Personal Website">
+  <meta name="author" content="Joel Butler">
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <div class="nav">
+      <ul>
+        <li class="home"><a href="index">Home</a></li>
+        <li class="skills"><a class="active" href="skills">Skills</a></li>
+        <li class="projects"><a href="projects">Projects</a></li>
+        <li class="about"><a href="about">About</a></li>
+        <li class="contact"><a href="contact">Contact</a></li>
+      </ul>
+    </div>
+  </head>
 </head>
 
 <body>
@@ -16,9 +26,9 @@
 	<div class="inner">
   <div class="content">
 	  <h1>Hello, I'm Joel Butler.</h1>
-	  <h2>This will be a blog page</h2>
+	  <h2>This is a Mechanical Engineering student's personal website</h2>
 	  <p>
-	      I plan on using this website to manage my personal development projects!
+	      Here are my skills!
 	  </p>
 	  <a href="http://instagram.com/jcwbutts"><i class="fa fa-instagram fa-4x"></i></a>
 	  <a href="http://youtube.com/"><i class="fa fa-youtube fa-4x"></i></a>
