--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <div class="nav">
       <ul>
-        <li class="home"><a href="index">Home</a></li>
+        <li class="home"><a href="">Home</a></li>
         <li class="skills"><a class="active" href="skills">Skills</a></li>
         <li class="projects"><a href="projects">Projects</a></li>
         <li class="about"><a href="about">About</a></li>
