--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 	  <h1>Hello, I'm Joel Butler.</h1>
 	  <h2>This is a Mechanical Engineering student's personal website</h2>
 	  <p>
-	      This is my contact page
+		   This is my contact information.
 	  </p>
 	  <a href="http://instagram.com/jcwbutts"><i class="fa fa-instagram fa-4x"></i></a>
 	  <a href="http://youtube.com/"><i class="fa fa-youtube fa-4x"></i></a>
