--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="nav">
       <ul>
       	<li><a class="active" href="/">Home</a></li>
-        <li class="skills"><a class="active" href="skills">Skills</a></li>
+        <li class="skills"><a href="skills">Skills</a></li>
         <li class="projects"><a href="projects">Projects</a></li>
         <li class="about"><a href="about">About</a></li>
         <li class="contact"><a href="contact">Contact</a></li>
