--- a/projects.html
+++ b/projects.html
@@ -12,8 +12,8 @@
     <div class="nav">
       <ul>
         <li class="home"><a href="/">Home</a></li>
-        <li class="skills"><a class="active" href="skills">Skills</a></li>
-        <li class="projects"><a href="projects">Projects</a></li>
+        <li class="skills"><a href="skills">Skills</a></li>
+        <li class="projects"><a class="active" href="projects">Projects</a></li>
         <li class="about"><a href="about">About</a></li>
         <li class="contact"><a href="contact">Contact</a></li>
       </ul>
