--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
     <div class="nav">
       <ul>
         <li class="home"><a href="index">Home</a></li>
-        <li class="skills"><a class="active" href="skills">Skills</a></li>
+        <li class="skills"><a href="skills">Skills</a></li>
         <li class="projects"><a href="projects">Projects</a></li>
-        <li class="about"><a href="about">About</a></li>
+        <li class="about"><a class="active" href="about">About</a></li>
         <li class="contact"><a href="contact">Contact</a></li>
       </ul>
     </div>
