--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,10 @@
     <div class="nav">
       <ul>
         <li class="home"><a href="/">Home</a></li>
-        <li class="skills"><a class="active" href="skills">Skills</a></li>
+        <li class="skills"><a href="skills">Skills</a></li>
         <li class="projects"><a href="projects">Projects</a></li>
         <li class="about"><a href="about">About</a></li>
-        <li class="contact"><a href="contact">Contact</a></li>
+        <li class="contact"><a class="active" href="contact">Contact</a></li>
       </ul>
     </div>
   </head>
