--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <meta name="author" content="Joel Butler">
 
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <div class="nav">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"></head>
+
+<body>    
+<div class="nav">
       <ul>
       	<li><a class="active" href="/">Home</a></li>
         <li class="skills"><a href="skills">Skills</a></li>
@@ -18,9 +20,6 @@
         <li class="contact"><a href="contact">Contact</a></li>
       </ul>
     </div>
-  </head>
-
-<body>
   <div class="container">
 	<div class="inner">
   <div class="content">
