--- a/skills.html
+++ b/skills.html
@@ -9,6 +9,15 @@
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <div class="nav">
+      <ul>
+        <li class="home"><a href="/">Home</a></li>
+        <li class="skills"><a class="active"href="skills">Skills</a></li>
+        <li class="projects"><a href="projects">Projects</a></li>
+        <li class="about"><a href="about">About</a></li>
+        <li class="contact"><a href="contact">Contact</a></li>
+      </ul>
+    </div>
   </head>
 </head>
 
@@ -19,7 +28,7 @@
 	  <h1>Hello, I'm Joel Butler.</h1>
 	  <h2>This is a Mechanical Engineering student's personal website</h2>
 	  <p>
-	      Here are my skills!
+	      here is my skills page!
 	  </p>
 	  <a href="http://instagram.com/jcwbutts"><i class="fa fa-instagram fa-4x"></i></a>
 	  <a href="http://youtube.com/"><i class="fa fa-youtube fa-4x"></i></a>
