--- a/index.html
+++ b/index.html
@@ -11,16 +11,27 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
   
-<body>    
-   <nav class="nav">
+<header>
+  <section>
+   <nav class="nav-right">
       <ul>
-      	<li><a class="active" href="/">Home</a></li>
-        <li class="skills"><a href="skills">Skills</a></li>
-        <li class="projects"><a href="projects">Projects</a></li>
-        <li class="about"><a href="about">About</a></li>
         <li class="contact"><a href="contact">Contact</a></li>
+        <li class="about"><a href="about">About</a></li>
+        <li class="projects"><a href="projects">Projects</a></li>
+        <li class="skills"><a href="skills">Skills</a></li>
+      	<li><a class="active" href="/">Home</a></li> 
       </ul>
-  </nav>
+    </nav>
+    
+    <nav class="nav-left">
+         <a> JOEL BUTLER </a>
+    </nav>
+   
+  </section>  
+</header>
+  
+<body>    
+
   
   <section class="container">
     
