--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
             <p> I like solving problems and making my ideas come to life.</P>
         </h2>
 	      <p>
-	      This page is about me
+	      I will talk about myself here.
 	      </p>
     
 	  <a href="http://instagram.com/jcwbutts"><i class="fa fa-instagram fa-4x"></i></a>
