--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             <p> I like solving problems and making my ideas come to life.</P>
         </h2>
 	      <p>
-	      Find my contact information on this page (eventually).
+	      This page will have my contact information.
 	      </p>
     
 	  <a href="http://instagram.com/jcwbutts"><i class="fa fa-instagram fa-4x"></i></a>
