--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
      <div class="inner">
         <div class="content">
            <h1>Origami Koi</h1>
-            <div class="image"><a href="images/koi.jpg"><img src="images/koi.jpg" width="150" height="150" align="right""></a></div>
+            <div class="image"><a href="images/koi.jpg"><img src="images/koi.jpg" alt="Origami Koi" width="150" height="150" align="right""></a></div>
             <h2>Is it a skill? Im not sure. It was actually really close to being a huge waste of time. I spent about two hours struggling to fold this koi. </h2>
             <h2>All you need is an American dollar, and a little bit of patience. While exploring Michaels Crafts i stumbled upon an origami book by Won Park.</h2>
-            <div class="image"><a href="files/dollarkoifish.pdf"><img src="images/koiinstructions.jpg" width="150" height="150" align="right""></a></div>
+            <div class="image"><a href="files/dollarkoifish.pdf"><img src="images/koiinstructions.jpg" alt="Origami Koi Instructions" width="150" height="150" align="right""></a></div>
         </div>
     </div>
  </section>
