--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <p>As a child, my sister and i folded countless paper cranes. She even folded around 2000 miniature cranes as some sort o
 			f sick twisted mural art project. Each crane takes about a minute to fold. In anycase, i absolutley had to try my hands 
 			at this a koi fish! How hard could it be? </p>
-            <a href="files/dollarkoifish.pdf"><img style="float: left; margin: 0px 25px 0px 0px;" src="images/koiinstructions.jpg" width="150" height="150"></a>
+            <a href="files/dollarkoifish.pdf"><img style="float: left; margin: 0px 25px 0px 0px;" src="images/koiinstructions.JPG" width="150" height="150"></a>
            <p>Well, for two hours of fun (or pain depending on how you look at it) all you need is an American dollar, two hands, and a little bit of patience. 
 		   There two distinct moments where i was close to ripping the dollar into a million pieces. Once during steps 15 through 30 which involved 
 		   45 minutes or so of pre-folding. And once again during step 38 because how am i supposed to understand whats happening there?! </p>
