--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 				<a href="/images/Koi.JPG"><img style="float:right; margin: 0px 0px 15px 25px;" src="/images/Koi.JPG" alt="Origami Koi" width="150" height="150"></a>
 				<p> Is it a skill? Im not sure. It was actually really close to being a huge waste of time. While exploring Michaels, 
 				i stumbled upon an origami book by Won Park which contained an incredibly realistic dollar bill Koi fish. </p>
-            <p>As a child, my sister and i folded countless paper cranes. She even folded around 2000 miniature cranes as some sort o
-			f sick twisted mural art project. Each crane takes about a minute to fold. In anycase, i absolutley had to try my hands 
+            <p>As a child, my sister and i folded countless paper cranes. She even folded around 2000 miniature cranes as some sort of 
+            sick twisted mural art project. Each crane takes about a minute to fold. In anycase, i absolutley had to try my hands 
 			at this a koi fish! How hard could it be? </p>
             <a href="files/dollarkoifish.pdf"><img style="float: left; margin: 0px 25px 0px 0px;" src="images/koiinstructions.JPG" width="150" height="150"></a>
            <p>Well, for two hours of fun (or pain depending on how you look at it) all you need is an American dollar, two hands, and a little bit of patience. 
