--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
       <div class="content">
 	      <h1>Contact</h1>
 	      <h2> <center>For now, here is my email address. </h2>
-          <center></center><a href="mailto:joel.c.butler@gmail.com"><i class="fa fa-envelope-o fa-3x"></i></a>
+          <p><center></center><a href="mailto:joel.c.butler@gmail.com"><i class="fa fa-envelope-o fa-3x"></i></a></p>
        </div>
     </div>
   </section>
