--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
 	<div class="inner">
       <div class="content">
 	      <h1>Hello, I'm Joel Butler.</h1>
-          <h2>I'm a Mechanical Engineering Student attending the University of Victoria.  </h2>
+          <h2>I'm a 3rd year Mechanical Engineering Student attending the University of Victoria.  </h2>
           <h2> I like solving problems and making my ideas come to life.</h2>
-	      <p>This website is a learning experience. 
-           Using HTML, and CSS, and Javascript, i plan to grow and shape this website as i learn.</p>
+	      <p>I am not graphic designer. This website is a learning experience. 
+           However, all of the HTML, CSS, and Javascript code has been written by yours truley. 
+           I plan to grow and shape this website as i learn.</p>
+           <h2>See my most recently uploaded project below!</h2>
        </div>
     </div>
   </section>
