--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
 	<div class="inner">
       <div class="content">
 	      <h1>Hello, I'm Joel Butler.</h1>
-          <h2>I'm a 3rd year Mechanical Engineering Student attending the University of Victoria.  </h2>
-          <h2> I like solving problems and making my ideas come to life.</h2>
+          <h2> <center>I'm a 3rd year Mechanical Engineering Student attending the University of Victoria. </center> </h2>
+          <h2> <center>I like solving problems and making my ideas come to life.</center></h2>
 	      <p>I am not graphic designer. This website is a learning experience. 
            However, all of the HTML, CSS, and Javascript code has been written by yours truley. 
            I plan to grow and shape this website as i learn.</p>
-           <h2>See my most recently uploaded project below!</h2>
+           <br>
+           <h2><center>See my most recently uploaded project below!</center></h2>
        </div>
     </div>
   </section>
