--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
   
-<body>    
+<body>  
+/* Background image for the page */
+	background: #254463 url('images/background.jpg') no-repeat center center fixed;
   <header>
    <nav class="navigation">
       <ul>
