--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <body>  
 /* Background image for the page */
 	background: #254463 url('images/background.jpg') no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
   <header>
    <nav class="navigation">
       <ul>
