--- a/index.html
+++ b/index.html
@@ -11,13 +11,7 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
   
-<body 
-/* Background image for the page */
-	background: #254463 url('images/background.jpg') no-repeat center center fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;>
+<body>
   <header>
    <nav class="navigation">
       <ul>
