--- a/skills.html
+++ b/skills.html
@@ -1,5 +1,15 @@
 <!doctype html>
 <html lang="en">
+<style>
+body  {
+    background-image: url("images/checkcanyon.jpg")no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+    background-color: #FFF;
+}
+</style>
 <head>
   <meta charset="UTF-8">
   <title>Joel Butler - Personal Website</title>
