--- a/skills.html
+++ b/skills.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <style>
 body  {
-    background-image: url('images/checkcanyon.jpg')no-repeat center center fixed;
+    background-image: url("/images/checkcanyon.jpg")no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
