--- a/skills.html
+++ b/skills.html
@@ -1,15 +1,5 @@
 <!doctype html>
 <html lang="en">
-<style>
-body  {
-    background-image: url("/images/checkcanyon.jpg")no-repeat center center fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-    background-color: #FFF;
-}
-</style>
 <head>
   <meta charset="UTF-8">
   <title>Joel Butler - Personal Website</title>
@@ -21,7 +11,7 @@ body  {
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
   
-<body>    
+<body-skills>    
   <header>
    <nav class="navigation">
       <ul>
@@ -70,6 +60,6 @@ function collapseFunction() {
 }
 </script>
     
-</body>
+</body-skills>
 </html>
 
