--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
   
-<body-skills>    
+<body class="skills">    
   <header>
    <nav class="navigation">
       <ul>
