--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
   
-<body>    
+<body class="projects">    
   <header>
    <nav class="navigation">
       <ul>
