--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
   
-<body class="skills">    
+<body class="home">
   <header>
    <nav class="navigation">
       <ul>
@@ -30,7 +30,7 @@
 	<div class="inner">
       <div class="content">
 	      <h1>Skills</h1>
-          <h2>I think i will make this a resume page?  </h2>
+          <h2> <center>I think this will be a skills or resume page? </center> </h2>
        </div>
     </div>
   </section>
@@ -60,6 +60,6 @@ function collapseFunction() {
 }
 </script>
     
-</body-skills>
+</body>
 </html>
 
