--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <ul>
         <li class="contact"><a href="contact">Contact</a></li>
         <li class="about"><a href="about">About</a></li>
-        <li class="projects"><a href="projects"><Projects</a></li>
+        <li class="projects"><a href="projects">Projects</a></li>
         <li class="skills"><a href="skills">Skills</a></li>
-        <li><a class="active" href="/">Home</a></li> 
+        <li class="home"><a class="active" href="/">Home</a></li> 
         <li class="icon"><a href="javascript:void(0);" onclick="collapseFunction()">
             <i class="fa fa-server fa-lg"></i></a><li>
       </ul>
