--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
+      	<img src="../images/namemask.svg" alt="">
 	      <h1>Hello, I'm Joel Butler.</h1>
           <h2> <center>I'm a 3rd year Mechanical Engineering Student attending the University of Victoria. </center> </h2>
           <h2> <center>I like solving problems and making my ideas come to life.</center></h2>
