--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
+      	<br>
       	<img src="../images/namemask.svg" alt="">
-	      <h1>Hello, I'm Joel Butler.</h1>
+	      <h1><center>MECHANICAL ENGINEERING STUDENT</center></h1>
           <h2> <center>I'm a 3rd year Mechanical Engineering Student attending the University of Victoria. </center> </h2>
           <h2> <center>I like solving problems and making my ideas come to life.</center></h2>
 	      <p>I am not graphic designer. This website is a learning experience. 
