--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="inner">
       <div class="content">
       	<br>
-      	<img src="../images/namemask.svg" alt="">
+      	<img src="../images/namemasksmall.svg" alt="">
 	      <h1><center>MECHANICAL ENGINEERING STUDENT</center></h1>
           <h2> <center>I'm a 3rd year Mechanical Engineering Student attending the University of Victoria. </center> </h2>
           <h2> <center>I like solving problems and making my ideas come to life.</center></h2>
