--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
       	<br>
       	<img src="../images/namemasksmall.svg" alt="">
 	      <h1><center>MECHANICAL ENGINEERING STUDENT</center></h1>
+	      <br>
+	      <br>
           <h2> <center>I'm a 3rd year Mechanical Engineering Student attending the University of Victoria. </center> </h2>
           <h2> <center>I like solving problems and making my ideas come to life.</center></h2>
-	      <p>I am not graphic designer. This website is a learning experience. 
+	      <h3>I am not graphic designer. This website is a learning experience. 
            However, all of the HTML, CSS, and Javascript code has been written by yours truley. 
-           I plan to grow and shape this website as i learn.</p>
+           I plan to grow and shape this website as i learn.</h3>
            <br>
            <h2><center>See my most recently uploaded project below!</center></h2>
        </div>
