--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,7 @@
 	<div class="inner">
       <div class="content">
 	      <h1>Contact</h1>
+	      <img src="../images/stencil.svg" alt="">
 	      <h2> <center>For now, here is my email address.</center> </h2>
           <p><center><a href="mailto:joel.c.butler@gmail.com"><i class="fa fa-envelope-o fa-3x"></i></a></center></p>
        </div>
