--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
         <h2> About this site! </h2>
         <h3> I am not a graphic designer... I am not a webdeveloper... I am not a writer...</h3>
         <h3> That being said, all of the HTML, CSS, and Javascript code for this website has been written by me! 
+        I have used graphic design software to develop the vector images you see on my site.
         This website started as an idea. And, true to myself, i wanted to see that idea come to life. </h3>
         <h3>I plan on using this website to learn, and share my ideas with you. It will operate as some what of a 
         blog where i post and share my adventures, and personal projects. I hope that in sharing my own projects, 
