--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
 	      <h1>Contact Me</h1>
         <h3><center> Fill out the form below to contact me!</center></h3>
         <br>
+        <div class="formcontainer">
       <div class="contactform">
       <div class="row body">
       <form action="#">
@@ -64,6 +65,7 @@
         </ul>
       </form>       
        </div>
+          </div>
     </div>
   </section>
        
