--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,8 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
-	      <h1>Contact Me</h1>        
-	      <hr>
+	      <h1>Contact Me</h1>
+        <hr>
         <br>
         <h3><center> Fill out the form below to contact me!</center></h3>
         <br>
@@ -65,7 +65,11 @@
             <input class="btn submit" type="submit" value="Submit" />
           </li>
         </ul>
-      </form>       
+      </form>    
+        <br>
+        <br>
+        <h3><center> If that doesnt work for you, send me an email.</h3>
+        <a href="mailto:joel.c.butler@gmail.com"><i class="fa fa-envelope-o fa-3x"></i></a>
        </div>
           </div>
     </div>
