--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <div class="formcontainer">
       <div class="contactform">
       <div class="row body">
-      <form action="#">
+      <form action="MAILTO:joel.c.butler@gmail.com" method="post" enctype="text/plain">
         <ul>
           <li>
             <p class="left">
