--- a/about.html
+++ b/about.html
@@ -34,15 +34,15 @@
           <h2> Learn some things about me! </h2>
         <h3> My name is Joel Butler. I am a third year Mechanical Engineering student studying at the university of Victoria. 
         I work full-time as Project Coordinator on various industrial installation projects.</h3>
-          <h3> In my spare time i enjoy challenging myself mentally and physically. Learning, making, reading, adventuring, climbing, and hiking are just a few of the activities i use to challenge myself.</h3>
+          <h3> In my spare time I enjoy challenging myself mentally and physically. Learning, making, reading, adventuring, climbing, and hiking are just a few of the activities i use to challenge myself.</h3>
         <h2> About this site! </h2>
         <h3> I am not a graphic designer... I am not a webdeveloper... I am not a writer...</h3>
         <h3> That being said, all of the HTML, CSS, and Javascript code for this website has been written by me! 
         I have used graphic design software to develop the vector images you see on my site.
-        This website started as an idea. And, true to myself, i wanted to see that idea come to life. </h3>
+        This website started as an idea. And, true to myself, I wanted to see that idea come to life. </h3>
         <h3>I plan on using this website to learn, and share my ideas with you. It will operate as some what of a 
-        blog where i post and share my adventures, and personal projects. I hope that in sharing my own projects, 
-        i can inspire you, and help you learn! </h3> 
+        blog where I post and share my adventures, and personal projects. I hope that in sharing my own projects, 
+        I can inspire you, and help you learn! </h3> 
    
        </div>
     </div>
