--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <h2> <center>I like solving problems and making my ideas come to life.</center></h2>
 	      <h3>I am not graphic designer. This website is a learning experience. 
            However, all of the HTML, CSS, and Javascript code has been written by yours truley. 
-           I plan to grow and shape this website as i learn.</h3>
+           I plan to grow and shape this website as I learn.</h3>
            <br>
        </div>
     </div>
