--- a/skills.html
+++ b/skills.html
@@ -30,7 +30,33 @@
 	<div class="inner">
       <div class="content">
 	      <h1>Skills</h1>
-          <h2> <center>I think this will be a skills or resume page? </center> </h2>
+        <hr><br>
+        
+<div class="table_container">
+<div class="cell">
+        <a href="skills/solidworks">SOLIDWORKS</div>
+    <div class="gutter"></div>
+    <div class="cell">
+        <a href="skills/autocad">AUTOCAD</div>
+      <div class="gutter"></div>
+    <div class="cell">
+      <a href="skills/arduino">HTML/CSS
+    </div>
+</div>
+      <BR>
+      <div class="table_container">
+<div class="cell">
+        <a href="skills/solidworks">ARDUINO
+  </div>
+    <div class="gutter"></div>
+    <div class="cell">
+        <a href="skills/autocad">DRAWING
+    </div>
+      <div class="gutter"></div>
+    <div class="cell">
+      <a href="skills/arduino">WOODWORK
+    </div>
+</div>
        </div>
     </div>
   </section>
