--- a/skills.html
+++ b/skills.html
@@ -39,22 +39,21 @@
     <div class="cell">
         <a href="skills/autocad">AUTOCAD</div>
       <div class="gutter"></div>
-    <div class="cell">
-      <a href="skills/arduino">HTML/CSS
+    <div class="cell">htmlcss">HTML/CSS
     </div>
 </div>
       <BR>
       <div class="table_container">
 <div class="cell">
-        <a href="skills/solidworks">ARDUINO
+        <a href="skills/arduinos">ARDUINO
   </div>
     <div class="gutter"></div>
     <div class="cell">
-        <a href="skills/autocad">DRAWING
+        <a href="skills/drawing">DRAWING
     </div>
       <div class="gutter"></div>
     <div class="cell">
-      <a href="skills/arduino">WOODWORK
+      <a href="skills/woodwork">WOODWORK
     </div>
 </div>
        </div>
