--- a/skills.html
+++ b/skills.html
@@ -39,8 +39,8 @@
     <div class="cell">
         <a href="skills/autocad">AUTOCAD</div>
       <div class="gutter"></div>
-    <div class="cell">htmlcss">HTML/CSS
-    </div>
+    <div class="cell">
+    	<a href="htmlcss">HTML/CSS</div>
 </div>
       <BR>
       <div class="table_container">
