--- a/skills.html
+++ b/skills.html
@@ -45,7 +45,7 @@
       <BR>
       <div class="table_container">
 <div class="cell">
-        <a href="skills/arduinos">ARDUINO
+        <a href="skills/arduino">ARDUINO
   </div>
     <div class="gutter"></div>
     <div class="cell">
