--- a/skills.html
+++ b/skills.html
@@ -34,7 +34,7 @@
         
 <div class="table_container">
 <div class="cell">
-        background-image: url("solidworks.jpg");<a href="skills/solidworks">SOLIDWORKS</div>
+        <background-image: url("solidworks.jpg")<a href="skills/solidworks">SOLIDWORKS</div>
     <div class="gutter"></div>
     <div class="cell">
         <a href="skills/autocad">AUTOCAD</div>
