--- a/skills.html
+++ b/skills.html
@@ -30,30 +30,31 @@
 	<div class="inner">
       <div class="content">
 	      <h1>Skills</h1>
-        <hr><br><br>
+        <hr><br>
         
 <div class="table_container">
-<div class="cell">
-        <background-image: url("solidworks.jpg")<a href="skills/solidworks">SOLIDWORKS</div>
+<div class="solidworkscell">
+        <a href="skills/solidworks">SOLIDWORKS</div>
     <div class="gutter"></div>
-    <div class="cell">
+    <div class="autocadcell">
         <a href="skills/autocad">AUTOCAD</div>
       <div class="gutter"></div>
-    <div class="cell">
-    	<a href="htmlcss">HTML/CSS</div>
+    <div class="htmlcsscell">
+      <a href="skills/arduino">HTML/CSS
+    </div>
 </div>
       <BR>
       <div class="table_container">
-<div class="cell">
-        <a href="skills/arduino">ARDUINO
+<div class="arduinocell">
+        <a href="skills/solidworks">ARDUINO
   </div>
     <div class="gutter"></div>
-    <div class="cell">
-        <a href="skills/drawing">DRAWING
+    <div class="drawingcell">
+        <a href="skills/autocad">DRAWING
     </div>
       <div class="gutter"></div>
-    <div class="cell">
-      <a href="skills/woodwork">WOODWORK
+    <div class="woodworkcell">
+      <a href="skills/arduino">WOODWORK
     </div>
 </div>
        </div>
