--- a/skills.html
+++ b/skills.html
@@ -40,21 +40,21 @@
         <a href="skills/autocad">AUTOCAD</div>
       <div class="gutter"></div>
     <div class="htmlcsscell">
-      <a href="skills/arduino">HTML/CSS
+      <a href="skills/htmlcss">HTML/CSS
     </div>
 </div>
       <BR>
       <div class="table_container">
 <div class="arduinocell">
-        <a href="skills/solidworks">ARDUINO
+        <a href="skills/arduino">ARDUINO
   </div>
     <div class="gutter"></div>
     <div class="drawingcell">
-        <a href="skills/autocad">DRAWING
+        <a href="skills/drawing">DRAWING
     </div>
       <div class="gutter"></div>
     <div class="woodworkcell">
-      <a href="skills/arduino">WOODWORK
+      <a href="skills/woodwork">WOODWORK
     </div>
 </div>
        </div>
