--- a/skills.html
+++ b/skills.html
@@ -57,6 +57,8 @@
       <a href="skills/woodwork">WOODWORK
     </div>
 </div>
+<hr><br>
+      <h3><center>Resume available upon request</h3>
        </div>
     </div>
   </section>
