--- a/skills.html
+++ b/skills.html
@@ -32,7 +32,7 @@
 	      <h1>Skills</h1>
         <hr><br>
         
-<div class="table_container">
+<div class="tablecontainer">
 <div class="solidworkscell">
         <a href="skills/solidworks">SOLIDWORKS</div>
     <div class="gutter"></div>
@@ -44,7 +44,7 @@
     </div>
 </div>
       <BR>
-      <div class="table_container">
+      <div class="tablecontainer">
 <div class="arduinocell">
         <a href="skills/arduino">ARDUINO
   </div>
