--- a/skills.html
+++ b/skills.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Joel Butler - Personal Website</title>
+  <title>Joel Butler - Skills Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1 height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
   <meta name="description" content="Personal Website">
   <meta name="author" content="Joel Butler">
@@ -55,10 +55,11 @@
       <div class="gutter"></div>
     <div class="woodworkcell">
       <a href="skills/woodwork">WOODWORK
-    </div>
-</div>
+      </a></div>
+</div><br>
 <hr><br>
       <h3><center>Resume available upon request</h3>
+        <br><br>
        </div>
     </div>
   </section>
