--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       	<br>
       	<br>
       	<br>
-      	<img src="../images/namemasksmall.svg" alt="">
+     	  <div class="nameimg">
+    		<img src="www.joel-butler.com/images/namemasksmall.svg" alt="Joel Butler"></div>
 	      <h1><center>MECHANICAL ENGINEERING STUDENT</center></h1>
 	      <hr>
 	      <br>
