--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
       	<br>
       	<br>
       	<br>
-     	  <div class="nameimg">
-    		<img src="www.joel-butler.com/images/namemasksmall.svg" alt="Joel Butler"></div>
+        <div class="nameimg">
+    <img src="www.joel-butler.com/images/namemasksmall.svg" alt="Joel Butler" width="300" height="200">
+</div>
 	      <h1><center>MECHANICAL ENGINEERING STUDENT</center></h1>
 	      <hr>
 	      <br>
