--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 	      <br>
           <h2> <center>I'm a 3rd year Mechanical Engineering Student attending the University of Victoria. </center> </h2>
           <h2> <center>I like solving problems and making my ideas come to life.</center></h2>
-	      <h3>I am not graphic designer. This website is a learning experience. 
-           However, all of the HTML, CSS, and Javascript code has been written by yours truley. 
+	      <h3>I am not a graphic designer. This website is a learning experience. 
+           However, all of the HTML, CSS, and Javascript code has been written by yours truly. 
            I plan to grow and shape this website as I learn.</h3>
            <br>
        </div>
