--- a/projects.html
+++ b/projects.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Joel Butler - Personal Website</title>
+  <title>Joel Butler - Personal Projects</title>
   <meta name="viewport" content="width=device-width, initial-scale=1 height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <meta name="description" content="Personal Website">
+  <meta name="description" content="Projects">
   <meta name="author" content="Joel Butler">
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
   
-<body class="projects">
+<body class="about">    
   <header>
    <nav class="navigation">
       <ul>
         <li class="contact"><a href="contact">Contact</a></li>
         <li class="about"><a href="about">About</a></li>
         <li class="projects"><a class="active" href="projects">Projects</a></li>
-        <li class="skills"><a href="skills">Skills</a></li>
+        <li class="skills"><a  href="skills">Skills</a></li>
         <li class="home"><a href="/">Home</a></li> 
         <li class="icon"><a href="javascript:void(0);" onclick="collapseFunction()">
             <i class="fa fa-server fa-lg"></i></a><li>
@@ -26,10 +26,10 @@
      <a1> JOEL BUTLER</a1>
   </header>  
   
-  <section class="article">
-     <div class="inner">
-        <div class="content">
-           <h1>Origami Koi</h1>
+  <section class="container">
+	<div class="inner">
+      <div class="content">
+<h1>Origami Koi</h1>
 		<a href="/images/Koi.JPG"><img style="float:right; margin: 0px 0px 15px 25px;" src="/images/Koi.JPG" alt="Origami Koi" width="150" height="150"></a>
 		<h3> Is it a skill? I’m not sure. It was actually really close to being a huge waste of time. While exploring Michaels,  
 		I stumbled upon an origami book by Won Park which contained an incredibly realistic dollar bill Koi fish. </h3>
@@ -40,9 +40,9 @@
            	<h3>Well, for two hours of fun (or pain depending on how you look at it) all you need is an American dollar, two hands, and a little bit of patience. 
 		There two distinct moments where I was close to ripping the dollar into a million pieces. Once during steps 15 through 30 which involved
 		45 minutes or so of pre-folding. And once again during step 38 because how am I supposed to understand what’s happening there?! </h3>
-		</div>
-	</div>
- </section>
+       </div>
+    </div>
+  </section>
        
    <footer class="footer-right">
       	  <a href="http://instagram.com/jcwbutts"><i class="fa fa-instagram fa-2x"></i></a>
