--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,10 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
-<h1>Origami Koi</h1>
+      <h1> Projects</h1>
+      	<hr><br> ADVENTURING ART TECHNICAL COOKING <br>
+<br><hr>
+        <h1>Origami Koi</h1>
 		<a href="/images/Koi.JPG"><img style="float:right; margin: 0px 0px 15px 25px;" src="/images/Koi.JPG" alt="Origami Koi" width="160" height="160"></a>
 		<h3> Is it a skill? I’m not sure. It was actually really close to being a huge waste of time. While exploring Michaels,  
 		I stumbled upon an origami book by Won Park which contained an incredibly realistic dollar bill Koi fish. </h3>
