--- a/projects.html
+++ b/projects.html
@@ -30,8 +30,15 @@
 	<div class="inner">
       <div class="content">
       <h1> Projects</h1>
-      	<hr><br> ADVENTURING ART TECHNICAL COOKING <br>
-<br><hr>
+        <nav class="projectsbar">
+        <ul>
+          <hr>
+        <li class="adventure"><a href="projects/adventure">Adventure</a></li>
+        <li class="art"><a href="projects/art">Art</a></li>
+        <li class="cooking"><a href="projects/cooking">Cooking</a></li>
+        <li class="technical"><a  href="projects/technical">Technical</a></li>
+        <hr></ul>
+        </nav>
         <h1>Origami Koi</h1>
 		<a href="/images/Koi.JPG"><img style="float:right; margin: 0px 0px 15px 25px;" src="/images/Koi.JPG" alt="Origami Koi" width="160" height="160"></a>
 		<h3> Is it a skill? I’m not sure. It was actually really close to being a huge waste of time. While exploring Michaels,  
