--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
       <ul>
         <li class="contact"><a href="contact">Contact</a></li>
         <li class="about"><a href="about">About</a></li>
-        <li class="projects"><a class="active" href="projects">Projects</a></li>
+        <li class="projects"><a class="active" href="projects.html">Projects</a></li>
         <li class="skills"><a  href="skills">Skills</a></li>
         <li class="home"><a href="/">Home</a></li> 
         <li class="icon"><a href="javascript:void(0);" onclick="collapseFunction()">
