--- a/skills.html
+++ b/skills.html
@@ -34,7 +34,7 @@
         
 <div class="tablecontainer">
 <div class="solidworkscell">
-        <a href="skills/solidworks">SOLIDWORKS</div>
+        <a href="solidworks">SOLIDWORKS</div>
     <div class="gutter"></div>
     <div class="autocadcell">
         <a href="skills/autocad">AUTOCAD</div>
