--- a/skills/index.html
+++ b/skills/index.html
@@ -34,27 +34,27 @@
         
 <div class="tablecontainer">
 <div class="solidworkscell">
-        <a href="skills/solidworks">SOLIDWORKS</div>
+        <a href="solidworks">SOLIDWORKS</div>
     <div class="gutter"></div>
     <div class="autocadcell">
-        <a href="skills/autocad">AUTOCAD</div>
+        <a href="autocad">AUTOCAD</div>
       <div class="gutter"></div>
     <div class="htmlcsscell">
-      <a href="skills/htmlcss">HTML/CSS
+      <a href="htmlcss">HTML/CSS
     </div>
 </div>
       <BR>
       <div class="tablecontainer">
 <div class="arduinocell">
-        <a href="skills/arduino">ARDUINO
+        <a href="arduino">ARDUINO
   </div>
     <div class="gutter"></div>
     <div class="drawingcell">
-        <a href="skills/drawing">DRAWING
+        <a href="drawing">DRAWING
     </div>
       <div class="gutter"></div>
     <div class="woodworkcell">
-      <a href="skills/woodwork">WOODWORK
+      <a href="woodwork">WOODWORK
       </a></div>
 </div><br>
 <hr><br>
