--- a/skills/autocad.html
+++ b/skills/autocad.html
@@ -31,26 +31,14 @@
       <div class="content">
 	      <h1>AutoCAD</h1>
         <hr><br>
-        <h3> Solidworks is another extension of my drawing abilities and makes use of a strong visual understanding of 3d space. Drawing in solidworks is almost like playing a video game. </h3>
-<h3><ul>
-  <li>Precicely follow drafting design principles</li>
-<li>Create mechanical components, schematics, angle and orthographic views</li>
-<li>Produce detailed designs, and drawings using technical product specifications</li>
-<li>Build detailed renderings, illustrations, and motion simulations</li>
-<li>Construct drawings and designs from hand sketches</li>
-  </ul>
-  <h2>FUEL TANK</h2>
-<h3> As part of the UVic formula SAE team, I designed the race car’s fuel tank. This fuel tank was used on the formula SAE race car for the 2015 season event in Michigan.</h3>
-  <a href="/images/fueltank.jpg"><img style="float:right; margin: 20px 20px 20px 20px;" src="/images/fueltank.jpg" alt="Solidworks Fuel Tank" width="160" height="160"></a><br>
-<h3>Technical specifications and documents were used to create the fuel tank focusing on space, size, material, manufacturing and existing physical constraints. Based on these design restrictions, detailed sheet metal drawings were produced for manufacturing.<h3>
+        <h3>AutoCAD is very similar to Solidworks. My drawing skills are easily transferrable between the two programs. However, I use AutoCAD primarily if a 3D model is not required. I also find AutoCAD easier for managing and creating drawings in 2D space. 
 
-  <h2>MOTORS</h2>
-<h3>Calipers were used to physically measure small components for modeling exercise. Motion simulation, rendering and meshing of gears were practiced in this project.</h3>
-   <a href="/images/doublegear.jpg"><img style="float:left; margin: 20px 20px 20px 20px;" src="/images/doublegear.jpg" alt="Solidworks Double Gear Motor" width="160" height="160"></a>
-<h3>The double gear motor uses small electric motors and gears to drive two independent axles. They are used for powering small “sumo” robots.</h3>
-   <a href="/images/miser.jpg"><img style="float:right; margin: 20px 20px 20px 20px;" src="/images/miser.jpg" alt="Solidworks Miser Sterling Engine" width="160" height="160"></a><br>
-<h3>The miser sterling engine is a heat displacement engine that runs off of a temperature difference. Air heats and flows moving a piston and wheel. If manufactured correctly, this engine will actually run off of the heat of your hand!</h3>
-<h3>From these detailed models, assembly drawings and detail drawings can easily be produced for manufacturing.</h3>
+-Create designs that meet and cost and material requirements for ease of manufacture
+-Develop detailed engineering blueprints and drawings using AutoCAD and Autodesk 
+-Verify the safety of selected designs through the use of engineering calculations
+-Conduct in field inspections to determine physical dimensions and design constraints
+-Create engineering drawings approved by professional structural engineers.
+ As part of a project’s installation design, a snatch block was chosen to raise a device weighing up to 16 tons. The existing 20 ton snatch block makes use of a shackle to connect to other objects. For this project, a new lifting apparatus was required in place of the shackle. A simple design made of readily available and easy to manufacture material was required. The design links the 16 ton body to the snatch block by means of two pins and two plates. Based on the required size of the shackle pin, it is clear that this is the weakest point in the design. Therefore, engineering calculations of shear stress, bearing stress, and normal stress, were carried out at this location to determine if the design will meet the required factor of safety.After confirming engineering calculations, the design was sent to a professional structural engineer for final approval.</h3>
 <br><hr><br>
       <h3><center>Resume available upon request</h3>
         <br><br>
