--- a/skills/arduino.html
+++ b/skills/arduino.html
@@ -31,28 +31,26 @@
       <div class="content">
 	      <h1>Arduino</h1>
         <hr><br>
-        <h3> Solidworks is another extension of my drawing abilities and makes use of a strong visual understanding of 3d space. Drawing in solidworks is almost like playing a video game. </h3>
-<h3><ul>
-  <li>Precicely follow drafting design principles</li>
-<li>Create mechanical components, schematics, angle and orthographic views</li>
-<li>Produce detailed designs, and drawings using technical product specifications</li>
-<li>Build detailed renderings, illustrations, and motion simulations</li>
-<li>Construct drawings and designs from hand sketches</li>
-  </ul>
-  <h2>FUEL TANK</h2>
-<h3> As part of the UVic formula SAE team, I designed the race car’s fuel tank. This fuel tank was used on the formula SAE race car for the 2015 season event in Michigan.</h3>
-  <a href="/images/fueltank.jpg"><img style="float:right; margin: 20px 20px 20px 20px;" src="/images/fueltank.jpg" alt="Solidworks Fuel Tank" width="160" height="160"></a><br>
-<h3>Technical specifications and documents were used to create the fuel tank focusing on space, size, material, manufacturing and existing physical constraints. Based on these design restrictions, detailed sheet metal drawings were produced for manufacturing.<h3>
+        <h3> HTML, CSS and JavaScript are all a large work in progress for me, however I have been thoroughly enjoying learning another new skill. Especially one I believe will be invaluable to me in the future. 
 
-  <h2>MOTORS</h2>
-<h3>Calipers were used to physically measure small components for modeling exercise. Motion simulation, rendering and meshing of gears were practiced in this project.</h3>
-   <a href="/images/doublegear.jpg"><img style="float:left; margin: 20px 20px 20px 20px;" src="/images/doublegear.jpg" alt="Solidworks Double Gear Motor" width="160" height="160"></a>
-<h3>The double gear motor uses small electric motors and gears to drive two independent axles. They are used for powering small “sumo” robots.</h3>
-   <a href="/images/miser.jpg"><img style="float:right; margin: 20px 20px 20px 20px;" src="/images/miser.jpg" alt="Solidworks Miser Sterling Engine" width="160" height="160"></a><br>
-<h3>The miser sterling engine is a heat displacement engine that runs off of a temperature difference. Air heats and flows moving a piston and wheel. If manufactured correctly, this engine will actually run off of the heat of your hand!</h3>
-<h3>From these detailed models, assembly drawings and detail drawings can easily be produced for manufacturing.</h3>
-<br><hr><br>
-      <h3><center>Resume available upon request</h3>
+This website is really the only experience with HTML I have. I started from the ground up basically starting with a simple background image with some overlaid text. From there, I added a fixed top navigation bar which is responsive based on what page is selected. 
+
+A website footer was finished next. Lucky, I do have some experience in C++, C, and Arduino programming which has really helped me understand existing code and create new HTML code quickly. I bought an HTML book and used many online resources to find ideas and learn.
+
+From here, I began building individual pages from the visions I had on paper. I knew I wanted my name to stand out on my home page, but regular text wasn’t going to cut it. I used free graphic design software called InkScape to create a vector image. This allowed me to create a white background with see through letters. I previously gained experience with InkScape when I was creating G-Code for my Arduino CNC project. 
+
+I also learned how to use images to link to various pages such as Instagram, and email. Furthermore, these links can also direct a user to child pages on my website.
+
+For my “skills” page, I learned how to create tables and size images to suit. The major challenge with this was formatting the page for various window sizes. It was challenging to create responsive images that resize themselves based on the size of the device used.
+
+By this point I didn’t really even have any “content” on my website and I was really thinking that creating my own website on WordPress would be much less of a pain. However, solving problems absorbs me and I really enjoy when the lightbulb clicks and something I have been struggling with suddenly works. Success! Sure enough, solving small problem after small problem creates something complex and attractive. 
+
+I learned how to create a form for collecting visitor information. The problem with this is, that for the form to work correctly, it needs to have some PHP code which will send an email directly from the form. I don’t know the first thing about PHP! 
+
+Finally, before I’m satisfied, I also would like to have a simple format for organizing and creating new project pages. This way, each time I make a new post, I can sort that quickly into my website without writing a ton of code. 
+
+Out of all of the personal projects I have undertaken, I would argue that this has website been the most rewarding so far. 
+</h3>
         <br><br>
        </div>
     </div>
