--- a/skills/drawing.html
+++ b/skills/drawing.html
@@ -31,28 +31,7 @@
       <div class="content">
 	      <h1>Drawing</h1>
         <hr><br>
-        <h3> Solidworks is another extension of my drawing abilities and makes use of a strong visual understanding of 3d space. Drawing in solidworks is almost like playing a video game. </h3>
-<h3><ul>
-  <li>Precicely follow drafting design principles</li>
-<li>Create mechanical components, schematics, angle and orthographic views</li>
-<li>Produce detailed designs, and drawings using technical product specifications</li>
-<li>Build detailed renderings, illustrations, and motion simulations</li>
-<li>Construct drawings and designs from hand sketches</li>
-  </ul>
-  <h2>FUEL TANK</h2>
-<h3> As part of the UVic formula SAE team, I designed the race car’s fuel tank. This fuel tank was used on the formula SAE race car for the 2015 season event in Michigan.</h3>
-  <a href="/images/fueltank.jpg"><img style="float:right; margin: 20px 20px 20px 20px;" src="/images/fueltank.jpg" alt="Solidworks Fuel Tank" width="160" height="160"></a><br>
-<h3>Technical specifications and documents were used to create the fuel tank focusing on space, size, material, manufacturing and existing physical constraints. Based on these design restrictions, detailed sheet metal drawings were produced for manufacturing.<h3>
-
-  <h2>MOTORS</h2>
-<h3>Calipers were used to physically measure small components for modeling exercise. Motion simulation, rendering and meshing of gears were practiced in this project.</h3>
-   <a href="/images/doublegear.jpg"><img style="float:left; margin: 20px 20px 20px 20px;" src="/images/doublegear.jpg" alt="Solidworks Double Gear Motor" width="160" height="160"></a>
-<h3>The double gear motor uses small electric motors and gears to drive two independent axles. They are used for powering small “sumo” robots.</h3>
-   <a href="/images/miser.jpg"><img style="float:right; margin: 20px 20px 20px 20px;" src="/images/miser.jpg" alt="Solidworks Miser Sterling Engine" width="160" height="160"></a><br>
-<h3>The miser sterling engine is a heat displacement engine that runs off of a temperature difference. Air heats and flows moving a piston and wheel. If manufactured correctly, this engine will actually run off of the heat of your hand!</h3>
-<h3>From these detailed models, assembly drawings and detail drawings can easily be produced for manufacturing.</h3>
-<br><hr><br>
-      <h3><center>Resume available upon request</h3>
+        <h3>I don’t spend too much time drawing, but it’s a cool skill none the less. My sister is a professional tattoo artist and growing up alongside her, I was exposed to a ton of drawings, painting, and art in general. I don’t practice drawing but I happen to be quite decent at it. I believe this skill comes from having a strong visual understanding of objects and being able to replicate sizes and shapes precisely. Maybe I learned from watching her? I actually don’t really know anything about drawing technique. Either way, this skill really helps me when drawing in AutoCAD, Solidworks, hand sketching ideas, and Pictionary.</h3>
         <br><br>
        </div>
     </div>
