--- a/skills/solidworks.html
+++ b/skills/solidworks.html
@@ -46,7 +46,7 @@
 
   <h2>MOTORS</h2>
 <h3>Calipers were used to physically measure small components for modeling exercise. Motion simulation, rendering and meshing of gears were practiced in this project.</h3>
-   <a href="/images/doublegear.JPG"><img style="float:left; margin: 20px 20px 20px 20px;" src="../images/doublegear.JPG" alt="Solidworks Double Gear Motor" width="160" height="160"></a>
+   <a href="/images/doublegear.JPG"><img style="float:left; margin: 20px 20px 20px 20px;" src="../images/doublegear.JPG" alt="Solidworks Double Gear Motor" width="320" height="auto"></a>
 <h3>The double gear motor uses small electric motors and gears to drive two independent axles. They are used for powering small “sumo” robots.</h3>
    <a href="/images/miser.jpg"><img style="float:right; margin: 20px 20px 20px 20px;" src="/images/miser.jpg" alt="Solidworks Miser Sterling Engine" width="160" height="160"></a><br>
 <h3>The miser sterling engine is a heat displacement engine that runs off of a temperature difference. Air heats and flows moving a piston and wheel. If manufactured correctly, this engine will actually run off of the heat of your hand!</h3>
